--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 		<h1>Hooks</h1>
 		{{range .}}
 			<div>
-				<h2>{{.Name}}</h2>
+				<h2><a href="/hooks/edit/{{.Name}}">{{.Name}}</a></h2>
 			</div>
 		{{else}}
 			No hooks configured yet.
