Rename hook name to id and restrict valid characters

--- a/views/edithook.html
+++ b/views/edithook.html
@@ -5,8 +5,8 @@
 		<title>Rehook admin</title>
 	</head>
 	<body>
-		<h1>{{.Name}}</h1>
-		<form action="/hooks/delete/{{.Name}}" method="POST">
+		<h1>{{.ID}}</h1>
+		<form action="/hooks/delete/{{.ID}}" method="POST">
 			<div>
 				<button type="submit" value="delete">Delete</button>
 			</div>
