--- a/views/newhook.html
+++ b/views/newhook.html
@@ -8,8 +8,10 @@
 		<h1>New hook</h1>
 		<form action="/hooks" method="POST">
 			<div>
-				<label for="name">Hook name</label>
+				<label for="name">Hook name (only lowercase characters, numbers or dashes allowed)</label>
+				<br>
 				<input type="text" name="name" required autofocus>
+				<br><br>
 			</div>
 			<div>
 				<button type="submit">Create</button>
