Create separate hook store

--- a/views/hooks/new.html
+++ b/views/hooks/new.html
@@ -3,9 +3,9 @@
 <h1>New hook</h1>
 <form action="/hooks" method="POST">
 	<div>
-		<label for="name">Hook name (only lowercase characters, numbers or dashes allowed)</label>
+		<label for="id">Hook identifier (only lowercase characters, numbers or dashes allowed)</label>
 		<br>
-		<input type="text" name="name" required autofocus>
+		<input type="text" name="id" required autofocus>
 		<br><br>
 	</div>
 	<div>
