Add public dir for css and js assets

--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Rehook admin</title>
+		<link type="text/css" rel="stylesheet" href="/public/css/application.css">
 	</head>
 	<body>
 		<div>
