--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Rehook admin</title>
+
+		<!-- d3.js -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+
 		<link type="text/css" rel="stylesheet" href="/public/css/application.css">
 	</head>
 	<body>
