Link to home on every page

--- a/views/layout.html
+++ b/views/layout.html
@@ -11,6 +11,7 @@
 		<link type="text/css" rel="stylesheet" href="/public/css/application.css">
 	</head>
 	<body>
+		<a href="/">Rehook</a>
 		<div>
 			{{template "page" .}}
 		</div>
