--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -1,10 +1,18 @@
 {{define "page"}}
 
 <h1>{{.ID}}</h1>
-<form action="/hooks/delete/{{.ID}}" method="POST">
-	<div>
-		<button type="submit" value="delete">Delete</button>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<form action="/hooks/delete/{{.ID}}" method="POST">
+					<div>
+						<button type="submit" value="delete" class="btn btn-danger">Delete</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
-</form>
+</div>
 
 {{end}}
