--- a/views/hooks/index.html
+++ b/views/hooks/index.html
@@ -2,23 +2,31 @@
 
 <script src="/public/js/graph.js"></script>
 
-<h1>Hooks</h1>
+<div class="row">
+	<div class="col-lg-8 col-lg-offset-2">
+		<h1>Hooks</h1>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<p>
+					<a href="/hooks/new" class="btn btn-default pull-right">Create new hook</a>
+				</p>
 
-{{range $index, $element := .}}
-	<div>
-		<h2><a href="/hooks/edit/{{.ID}}">{{.ID}}</a> ({{.Count.Total}})</h2>
+				{{range $index, $element := .}}
+					<div>
+						<h2><a href="/hooks/edit/{{.ID}}">{{.ID}}</a> <small>({{.Count.Total}})</small></h2>
 
-		<div id="graph{{$index}}" class="graph">
+						<div id="graph{{$index}}" class="graph">
+						</div>
+						<small>Incoming requests last 48 hours</small>
+						<script>draw_graph("#graph{{$index}}", {{.Count.Recent}})</script>
+					</div>
+				{{else}}
+					No hooks configured yet.
+				{{end}}
+			</div>
 		</div>
-		<small>Incoming requests of the last 48 hours</small>
-		<script>draw_graph("#graph{{$index}}", {{.Count.Recent}})</script>
-	</div>
-{{else}}
-	No hooks configured yet.
-{{end}}
 
-<p>
-	<a href="/hooks/new">New hook</a>
-</p>
+	</div>
+</div>
 
 {{end}}
