--- a/views/hooks/new.html
+++ b/views/hooks/new.html
@@ -1,17 +1,24 @@
 {{define "page"}}
 
 <h1>New hook</h1>
-<form action="/hooks" method="POST">
-	<div>
-		<label for="id">Hook identifier (only lowercase characters, numbers or dashes allowed)</label>
-		<br>
-		<input type="text" name="id" required autofocus>
-		<br><br>
+
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<form action="/hooks" method="POST" role="form">
+					<div class="form-group">
+						<label for="id">Hook identifier <small>(only lowercase characters, numbers or dashes allowed)</small></label>
+						<input type="text" name="id" class="form-control" required autofocus>
+					</div>
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary">Create</button>
+						<a href="/">cancel</a>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
-	<div>
-		<button type="submit">Create</button>
-		<a href="/">cancel</a>
-	</div>
-</form>
+</div>
 
 {{end}}
