--- a/views/layout.html
+++ b/views/layout.html
@@ -8,13 +8,35 @@
 		<!-- d3.js -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
 
+		<!-- bootstrap -->
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
 		<link type="text/css" rel="stylesheet" href="/public/css/application.css">
+
+		<!-- Open Sans font -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
+
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+
 	</head>
 	<body>
-		<a href="/">Rehook</a>
-		<div>
+		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="/" class="navbar-brand"> Rehook</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
 			{{template "page" .}}
 		</div>
+
 	</body>
 </html>
 {{end}}
