--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -2,7 +2,9 @@
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<h1>{{.Hook.ID}}</h1>
+		<div class="panel-body header">
+			<h1>{{.Hook.ID}}</h1>
+		</div>
 
 		<div class="panel panel-default">
 			<div class="panel-body">
