--- a/views/hooks/new.html
+++ b/views/hooks/new.html
@@ -1,14 +1,16 @@
 {{define "page"}}
 
-<h1>New hook</h1>
 
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
+		<div class="panel-body header">
+			<h1>New hook</h1>
+		</div>
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<form action="/hooks" method="POST" role="form">
 					<div class="form-group">
-						<label for="id">Hook identifier <small>(only lowercase characters, numbers or dashes allowed)</small></label>
+						<label for="id">Hook identifier <br><small>(only lowercase characters, numbers or dashes allowed)</small></label>
 						<input type="text" name="id" class="form-control" required autofocus>
 					</div>
 					<div class="form-group">
