Add tooltips to bar chart

--- a/views/hooks/index.html
+++ b/views/hooks/index.html
@@ -6,7 +6,7 @@
 	<div class="col-lg-8 col-lg-offset-2">
 		<div class="panel-body header">
 			<h1>Hooks
-			<a href="/hooks/new" class="btn btn-default pull-right">Create new hook</a>
+			<a href="/hooks/new" class="btn btn-default pull-right" style="font-weight: 600;">Create new hook</a>
 			</h1>
 		</div>
 	</div>
