--- a/public/css/application.css
+++ b/public/css/application.css
@@ -54,6 +54,7 @@ h2.hook a {
 .axis text {
 	font-family: sans-serif;
 	font-size: 11px;
+	fill: #777;
 }
 
 .graph {
@@ -79,4 +80,37 @@ h2.hook a {
 	color: #eee;
 	font-size: 4em;
 	margin: -10px 0 0 0;
+}
+
+hr {
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+.d3-tip {
+	line-height: 1;
+	font-weight: bold;
+	font-size: 90%;
+	padding: 12px;
+	background: #414042;
+	color: #fff;
+	border-radius: 2px;
+}
+
+.d3-tip:after {
+	box-size: border-box;
+	display: inline;
+	font-size: 10px;
+	width: 100%;
+	line-height: 1;
+	color: #414042;
+	content: "\25BC";
+	position: absolute;
+	text-align: center;
+}
+
+.d3-tip.n:after {
+	margin: -3px 0 0 0;
+	top: 100%;
+	left: 0;
 }
