--- a/views/components/request-forward-action.html
+++ b/views/components/request-forward-action.html
@@ -9,8 +9,8 @@
 			<div class="panel-body">
 				<form action="/hooks/edit/{{.ID}}/create" method="POST">
 					<div class="form-group">
-						<label for="param-secret">URL</label>
-						<input type="text" name="param-url" class="form-control" autofocus>
+						<label for="param-url">URL</label>
+						<input type="url" name="param-url" class="form-control" autofocus>
 					</div>
 					<div class="form-group">
 						<input type="hidden" name="c" value="forward-request-action">
