--- a/views/components/email-action.html
+++ b/views/components/email-action.html
@@ -30,10 +30,10 @@
 						
 Sent by Rehook.</textarea>
 					</div>
-					<div class="form-group">
+					<div class="form-group pull-right">
 						<input type="hidden" name="c" value="email-action">
-						<button type="submit" class="btn btn-primary">Create</button>
-						<a href="/hooks/edit/{{.ID}}">cancel</a>
+						<a href="/hooks/edit/{{.ID}}">Cancel</a><span style="margin: 0 0.5em;">or</span>
+						<button type="submit" class="btn btn-success">Create</button>
 					</div>
 				</form>
 			</div>
