--- a/views/components/request-forward-action.html
+++ b/views/components/request-forward-action.html
@@ -12,10 +12,10 @@
 						<label for="param-url">URL</label>
 						<input type="url" name="param-url" class="form-control" autofocus>
 					</div>
-					<div class="form-group">
+					<div class="form-group pull-right">
 						<input type="hidden" name="c" value="forward-request-action">
-						<button type="submit" class="btn btn-primary">Create</button>
-						<a href="/hooks/edit/{{.ID}}">cancel</a>
+						<a href="/hooks/edit/{{.ID}}">Cancel</a><span style="margin: 0 0.5em;">or</span>
+						<button type="submit" class="btn btn-success">Create</button>
 					</div>
 				</form>
 			</div>
