Add small explanation to edit hook page

--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -8,6 +8,11 @@
 
 		<div class="panel panel-default">
 			<div class="panel-body">
+				<p>
+					Create the chain of components incoming requests will
+					pass through.
+				</p>
+
 				<div class="well text-center">Request</div>
 				<div class="text-center component-arrow">
 					<span class="glyphicon glyphicon-arrow-down"></span>
