--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -56,11 +56,27 @@
 
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<form action="/hooks/edit/{{.Hook.ID}}" method="POST">
-					<div class="pull-right">
-						<button name="action" type="submit" value="delete" class="btn btn-danger">Delete hook</button>
+				<a href="/" class="btn btn-default pull-left">Back</a>
+				<a data-toggle="modal" data-target="#confirm-delete" href="#" class="btn btn-danger pull-right">Delete hook</a>
+
+				<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-body">
+								Are you sure you want to delete this hook?
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+								<form action="/hooks/edit/{{.Hook.ID}}" method="POST">
+									<div class="pull-right">
+										<button name="action" type="submit" value="delete" class="btn btn-danger">Yes, delete this hook!</button>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
-				</form>
+				</div>
+
 			</div>
 		</div>
 	</div>
