--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -1,7 +1,7 @@
 {{define "page"}}
 
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
+	<div class="col-lg-8 col-lg-offset-2">
 		<div class="panel-body header">
 			<h1>{{.Hook.ID}}</h1>
 		</div>
@@ -13,7 +13,7 @@
 					pass through.
 				</p>
 
-				<div class="well text-center">Request</div>
+				<div class="well well-hidden text-center">Request</div>
 				<div class="text-center component-arrow">
 					<span class="glyphicon glyphicon-arrow-down"></span>
 				</div>
@@ -37,7 +37,7 @@
 				</div>
 				{{end}}
 
-				<div class="well text-center">
+				<div class="well well-dashed text-center">
 				<form action="/hooks/edit/{{.Hook.ID}}" method="POST">
 					<div class="btn-group">
 						<button href="#" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -54,31 +54,29 @@
 			</div>
 		</div>
 
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<a href="/" class="btn btn-default pull-left">Back</a>
-				<a data-toggle="modal" data-target="#confirm-delete" href="#" class="btn btn-danger pull-right">Delete hook</a>
+		<div class="panel-body">
+			<a href="/" class="btn btn-default pull-left">Back</a>
+			<a data-toggle="modal" data-target="#confirm-delete" href="#" class="btn btn-danger pull-right">Delete hook</a>
 
-				<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-body">
-								Are you sure you want to delete this hook?
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-								<form action="/hooks/edit/{{.Hook.ID}}" method="POST">
-									<div class="pull-right">
-										<button name="action" type="submit" value="delete" class="btn btn-danger">Yes, delete this hook!</button>
-									</div>
-								</form>
-							</div>
+			<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-body">
+							Are you sure you want to delete this hook?
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+							<form action="/hooks/edit/{{.Hook.ID}}" method="POST">
+								<div class="pull-right">
+									<button name="action" type="submit" value="delete" class="btn btn-danger">Yes, delete this hook!</button>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
+
 	</div>
 </div>
 
