--- a/views/layout.html
+++ b/views/layout.html
@@ -32,7 +32,9 @@
 		<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<a href="/" class="navbar-brand"> Rehook</a>
+					<a href="/" class="navbar-brand" style="position: relative;" title="Rehook" rel="home">
+						<img class="logo" src="/public/images/rehook-logo.png"> <span>Rehook</span>
+					</a>
 				</div>
 			</div>
 		</div>
