--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -23,11 +23,13 @@
 					<div class="well well-component">
 						<h4>
 							{{$c := index $.Components .Name}}{{$c.Name}}
-							<div class="btn-group pull-right">
-								<a href="/hooks/edit/{{$.Hook.ID}}/edit/{{.ID}}" class="btn btn-default btn-xs">edit</a>
-								<button type="submit" name="action" value="move-up" class="btn btn-default btn-xs">move up</button>
-								<button type="submit" name="action" value="move-down" class="btn btn-default btn-xs">move down</button>
-								<button type="submit" name="action" value="delete" class="btn btn-default btn-xs">delete</button>
+							<div class="pull-right">
+								<a href="/hooks/edit/{{$.Hook.ID}}/edit/{{.ID}}" class="btn btn-default btn-sm">Edit</a>
+								{{/*
+								<button type="submit" name="action" value="move-up" class="btn btn-default btn-xs">Move up</button>
+								<button type="submit" name="action" value="move-down" class="btn btn-default btn-xs">Move down</button>
+								*/}}
+								<button type="submit" name="action" value="delete" class="btn btn-default btn-sm">Delete</button>
 							</div>
 							<div class="clearfix"></div>
 							<input type="hidden" name="c" value="{{.ID}}">
