Update component page headers

--- a/views/components/email-action.html
+++ b/views/components/email-action.html
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<div class="panel-body header">
-			<h1>{{.Hook.ID}} <small>Send email (using Mailgun)</small></h1>
+			<h1>{{.Hook.ID}} <small>&gt; Send email (using Mailgun)</small></h1>
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-body">
