--- a/views/hooks/new.html
+++ b/views/hooks/new.html
@@ -10,12 +10,12 @@
 			<div class="panel-body">
 				<form action="/hooks" method="POST" role="form">
 					<div class="form-group">
-						<label for="id">Hook identifier <br><small>(only lowercase characters, numbers or dashes allowed)</small></label>
+						<label for="id">Hook identifier <br><small style="font-weight: normal;">(only lowercase characters, numbers or dashes allowed)</small></label>
 						<input type="text" name="id" class="form-control" required autofocus>
 					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary">Create</button>
-						<a href="/">cancel</a>
+					<div class="form-group pull-right">
+						<a href="/">cancel</a><span style="margin: 0 0.5em;">or</span>
+						<button type="submit" class="btn btn-success">Create</button>
 					</div>
 				</form>
 			</div>
