--- a/views/hooks/new.html
+++ b/views/hooks/new.html
@@ -8,10 +8,11 @@
 		</div>
 		<div class="panel panel-default">
 			<div class="panel-body">
+				{{if .Err}}<div class="alert alert-danger">{{.Err}}</div>{{end}}
 				<form action="/hooks" method="POST" role="form">
 					<div class="form-group">
 						<label for="id">Hook identifier <br><small style="font-weight: normal;">(only lowercase characters, numbers or dashes allowed)</small></label>
-						<input type="text" name="id" class="form-control" required autofocus>
+						<input type="text" name="id" class="form-control" value="{{.ID}}" required autofocus>
 					</div>
 					<div class="form-group pull-right">
 						<a href="/">cancel</a><span style="margin: 0 0.5em;">or</span>
