--- a/views/hooks/edit.html
+++ b/views/hooks/edit.html
@@ -24,12 +24,12 @@
 						<h4>
 							{{$c := index $.Components .Name}}{{$c.Name}}
 							<div class="pull-right">
-								<a href="/hooks/edit/{{$.Hook.ID}}/edit/{{.ID}}" class="btn btn-default btn-sm">Edit</a>
+								<a href="/hooks/edit/{{$.Hook.ID}}/edit/{{.ID}}" class="btn btn-default btn-sm" style="margin-right: 10px">Edit</a>
 								{{/*
 								<button type="submit" name="action" value="move-up" class="btn btn-default btn-xs">Move up</button>
 								<button type="submit" name="action" value="move-down" class="btn btn-default btn-xs">Move down</button>
 								*/}}
-								<button type="submit" name="action" value="delete" class="btn btn-default btn-sm">Delete</button>
+								<button type="submit" name="action" value="delete" class="btn btn-default btn-sm" style="margin-right: 10px">Delete</button>
 							</div>
 							<div class="clearfix"></div>
 							<input type="hidden" name="c" value="{{.ID}}">
