--- a/views/components/execute-action.html
+++ b/views/components/execute-action.html
@@ -1,26 +1,8 @@
-{{define "page"}}
+{{define "component"}}
 
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<div class="panel-body header">
-			<h1>{{.Hook.ID}} <small>&gt; Execute Command</small></h1>
-		</div>
-		<div class="panel panel-default">
-			<div class="panel-body">
-				<form action="/hooks/edit/{{.Hook.ID}}/{{if .ID}}update/{{.ID}}{{else}}create{{end}}" method="POST">
-					<div class="form-group">
-						<label for="param-command">Command</label>
-						<input type="text" name="param-command" class="form-control" value="{{.Params.command}}" autofocus>
-					</div>
-					<div class="form-group pull-right">
-						<input type="hidden" name="c" value="execute-action">
-						<a href="/hooks/edit/{{.Hook.ID}}">Cancel</a><span style="margin: 0 0.5em;">or</span>
-						<button type="submit" class="btn btn-success">Save</button>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+<div class="form-group">
+	<label for="param-command">Command</label>
+	<input type="text" name="param-command" class="form-control" value="{{.Params.command}}" autofocus>
 </div>
 
 {{end}}
